# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsplat-sensors"
version = "0.0.0"
description = "Sensor projection primitives for gsplat packages"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "gsplat-geometry",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
packages = [
    "gsplat_sensors",
    "gsplat_sensors.functional",
    "gsplat_sensors.kernels",
    "gsplat_sensors.kernels.cameras",
    "gsplat_sensors.kernels.common",
    "gsplat_sensors.kernels.cuda",
    "gsplat_sensors.kernels.lidars",
    "gsplat_sensors.models",
    "gsplat_sensors.models.common",
    "gsplat_sensors.models.cameras",
    "gsplat_sensors.models.lidars",
]
package-dir = { "gsplat_sensors" = "." }

[tool.setuptools.package-data]
gsplat_sensors = [
    "kernels/cuda/*.cpp",
    "kernels/cuda/csrc/*.cpp",
    "kernels/cuda/csrc/*.cu",
    "kernels/cuda/csrc/*.cuh",
    "kernels/cuda/csrc/*.h",
]
